--- a/src/app/hub/components/association-register/association-register.component.html
+++ b/src/app/hub/components/association-register/association-register.component.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="ctrls">
-            <button class="set-12" type="button" mat-raised-button color="warn">
+            <button class="set-12" type="button" mat-raised-button color="warn" (click)="killDialog()">
                 <small>Cancelar</small>
             </button>
             <button class="set-12" type="submit" mat-raised-button color="primary" (click)="onUpdateUserData"
