--- a/src/app/hub/components/card-solutions-mobile/card-solutions-mobile.component.scss
+++ b/src/app/hub/components/card-solutions-mobile/card-solutions-mobile.component.scss
@@ -1,3 +1,11 @@
 :host{
     width: 100%;
+    mat-card{
+      h3{
+        margin-bottom: 15px;
+      }
+      div{
+        margin-bottom: 15px;
+      }
+    }
   }
