--- a/src/app/components/add-category-dialog/add-category-dialog.component.html
+++ b/src/app/components/add-category-dialog/add-category-dialog.component.html
@@ -17,7 +17,7 @@
     <button type="button" mat-raised-button color="warn" (click)="killDialog()">
       <small>Cerrar</small>
     </button>
-    <button type="button" mat-raised-button color="primary" [disabled]="submitted" (click)="onAddCoverage()">
+    <button type="button" mat-raised-button color="primary" ="submitted" (click)="onAddCoverage()">
       <small>Guardar</small>
     </button>
     <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
