--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -1,108 +1,161 @@
 <div class="set-12 loading" *ngIf="!isDataAvailable">
-    <mat-spinner></mat-spinner>
+  <mat-spinner></mat-spinner>
 </div>
 
-<div class="form-profile " *ngIf="isDataAvailable && isMobile">
-    <h3>Mi perfil</h3>
-    <div class="avatarhldr">
-        <div class="profile">
-            <input #fileInput type="file" (change)="openCropperDialog($event)" accept="image/*" hidden />
-            <button type="button" class="avatar" (click)="fileInput.click()">
-                <img src="{{ user.avatarImage }}" alt="{{ user.firstname }} {{ user.lastname }}"
-                    *ngIf="user.avatarImage != null" />
-                <span *ngIf="user.avatarImage == null">
-                    {{ user.firstname | firstword | firstletter
-                    }}{{ user.lastname | firstword | firstletter }}
-                </span>
-                <div class="overlay" matTooltip="Cargar imágen" matTooltipClass="tooltip">
-                    <mat-icon color="accent">photo_camera</mat-icon>
-                </div>
-            </button>
+<div class="form-profile" *ngIf="isDataAvailable && isMobile">
+  <h3>Mi perfil</h3>
+  <div class="avatarhldr">
+    <div class="profile">
+      <input
+        #fileInput
+        type="file"
+        (change)="openCropperDialog($event)"
+        accept="image/*"
+        hidden
+      />
+      <button type="button" class="avatar" (click)="fileInput.click()">
+        <img
+          src="{{ user.avatarImage }}"
+          alt="{{ user.firstname }} {{ user.lastname }}"
+          *ngIf="user.avatarImage != null"
+        />
+        <span *ngIf="user.avatarImage == null">
+          {{ user.firstname | firstword | firstletter
+          }}{{ user.lastname | firstword | firstletter }}
+        </span>
+        <div
+          class="overlay"
+          matTooltip="Cargar imágen"
+          matTooltipClass="tooltip"
+        >
+          <mat-icon color="accent">photo_camera</mat-icon>
         </div>
+      </button>
     </div>
-    <form [formGroup]="formGroup" (submit)="onUpdateUserData(formGroup)">
-        <div>
-            <mat-form-field appearance="outline">
-                <mat-label>Nombre(s)</mat-label>
-                <input type="text" matInput formControlName="firstname">
-            </mat-form-field>
+  </div>
+  <form [formGroup]="formGroup" (submit)="onUpdateUserData(formGroup)">
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>Nombre(s)</mat-label>
+        <input type="text" matInput formControlName="firstname" />
+      </mat-form-field>
 
-            <mat-form-field appearance="outline">
-                <mat-label>Apellido(s)</mat-label>
-                <input type="text" matInput formControlName="lastname">
-            </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Apellido(s)</mat-label>
+        <input type="text" matInput formControlName="lastname" />
+      </mat-form-field>
 
-            <mat-form-field appearance="outline">
-                <mat-label>Genero</mat-label>
-                <mat-select formControlName="gender">
-                    <mat-option *ngFor="let genre of genders" [value]="genre.value">
-                        <small>{{genre.viewValue}}</small>
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Genero</mat-label>
+        <mat-select formControlName="gender">
+          <mat-option *ngFor="let genre of genders" [value]="genre.value">
+            <small>{{ genre.viewValue }}</small>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
 
-            <mat-form-field appearance="outline">
-                <mat-label>Código Postal</mat-label>
-                <input type="text" matInput formControlName="postalcode">
-            </mat-form-field>
-            <!-- 
+      <mat-form-field appearance="outline">
+        <mat-label>Código Postal</mat-label>
+        <input type="text" matInput formControlName="postalcode" />
+      </mat-form-field>
+      <!-- 
             <mat-form-field appearance="outline">
                 <mat-label>Ocupacion</mat-label>
                 <input matInput formControlName="ocupation">
             </mat-form-field> -->
 
-            <mat-form-field appearance="outline">
-                <mat-label>Télefono</mat-label>
-                <input type="text" matInput formControlName="phone">
-            </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Télefono</mat-label>
+        <input
+          type="text"
+          matInput
+          formControlName="phone"
+          [value]="user.phone | phoneFormat"
+        />
+      </mat-form-field>
 
-            <mat-form-field appearance="outline">
-                <mat-label>¿Qué te hace feliz de México?</mat-label>
-                <mat-chip-list #happyChipList>
-                    <mat-chip *ngFor="let item of happyArray" (removed)="removeHappyItem(item)">
-                        {{item.name}}
-                        <button matChipRemove>
-                            <mat-icon>cancel</mat-icon>
-                        </button>
-                    </mat-chip>
-                    <input formControlName="associationInterests" placeholder="" [matChipInputFor]="happyChipList"
-                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
-                        (matChipInputTokenEnd)="addHappyItem($event)">
-                    <button matSuffix><mat-icon>delete</mat-icon></button>
-                </mat-chip-list>
-               
-            </mat-form-field>
-
-            <mat-form-field appearance="outline">
-                <mat-label>¿Qué te entristece de México?</mat-label>
-                <mat-chip-list #unhappyChipList>
-                    <mat-chip *ngFor="let item of unhappyArray" (removed)="removeUnhappyItem(item)">
-                        {{item.name}}
-                        <button matChipRemove>
-                            <mat-icon>cancel</mat-icon>
-                        </button>
-                    </mat-chip>
-                    <input formControlName="uninterestingTopics" placeholder="" [matChipInputFor]="unhappyChipList"
-                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
-                        (matChipInputTokenEnd)="addUnhappyItem($event)">
-                    <button matSuffix><mat-icon>delete</mat-icon></button>
-                </mat-chip-list>
-                <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te haga feliz entriztesca, ej:
-                    <strong>"Comida o Delincuencia"</strong>
-                </mat-hint>
-            </mat-form-field>
-        </div>
-
-
-        <mat-checkbox (change)="openDialogAssociationRegister()">¿Perteneces a una asociación?</mat-checkbox>
-    
-
-        <div class="ctrls">
-            <button class="set-12" type="button" mat-raised-button color="warn" >
-                <small>Cancelar</small>
+      <mat-form-field appearance="outline">
+        <mat-label>¿Qué te hace feliz de México?</mat-label>
+        <mat-chip-list #happyChipList>
+          <mat-chip
+            *ngFor="let item of happyArray"
+            (removed)="removeHappyItem(item)"
+          >
+            {{ item.name }}
+            <button type="button" matChipRemove>
+              <mat-icon>cancel</mat-icon>
             </button>
-            <button class="set-12" type="submit" mat-raised-button color="primary" (click)="onUpdateUserData"
-               >Actualizar</button>
-        </div> 
-    </form>
+          </mat-chip>
+          <input
+            formControlName="associationInterests"
+            placeholder=""
+            [matChipInputFor]="happyChipList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+            [matChipInputAddOnBlur]="addOnBlur"
+            (matChipInputTokenEnd)="addHappyItem($event)"
+          />
+          <button type="button" matSuffix (click)="clearInputHappy()">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </mat-chip-list>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>¿Qué te entristece de México?</mat-label>
+        <mat-chip-list #unhappyChipList>
+          <mat-chip
+            *ngFor="let item of unhappyArray"
+            (removed)="removeUnhappyItem(item)"
+          >
+            {{ item.name }}
+            <button type="button" matChipRemove>
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip>
+          <input
+            formControlName="uninterestingTopics"
+            placeholder=""
+            [matChipInputFor]="unhappyChipList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+            [matChipInputAddOnBlur]="addOnBlur"
+            (matChipInputTokenEnd)="addUnhappyItem($event)"
+          />
+          <button type="button" matSuffix (click)="clearInputUnhappy()">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </mat-chip-list>
+        <mat-hint
+          >** Presiona <strong>ENTER</strong> después de escribir algo que te
+          haga feliz entriztesca, ej:
+          <strong>"Comida o Delincuencia"</strong>
+        </mat-hint>
+      </mat-form-field>
+    </div>
+
+    <mat-checkbox (change)="openDialogAssociationRegister()"
+      >¿Perteneces a una asociación?</mat-checkbox
+    >
+
+    <div class="ctrls">
+      <button
+        class="set-12"
+        type="button"
+        mat-raised-button
+        color="warn"
+        (click)="clearForm()"
+      >
+        <small>Cancelar</small>
+      </button>
+      <button
+        class="set-12"
+        type="submit"
+        mat-raised-button
+        color="primary"
+        (click)="(onUpdateUserData)"
+        [disabled]="formGroup.invalid"
+      >
+        Actualizar
+      </button>
+    </div>
+  </form>
 </div>
