--- a/src/app/hub/components/association-register/association-register.component.html
+++ b/src/app/hub/components/association-register/association-register.component.html
@@ -1,51 +1,134 @@
-<div class="form-association " *ngIf="isDataAvailable && isMobile">
-    <form [formGroup]="formGroup" (submit)="onUpdateUserData(formGroup)">
-        <div class="associationSection" >
-            <h3 class="mt-1">Datos de la asociación</h3>
-            <mat-form-field appearance="outline">
-                <mat-label>Tipo de asociación</mat-label>
-                <mat-select matInput formControlName="associationTypology">
-                    <mat-option *ngFor="let asociation of asociations" [value]="asociation.value">
-                        <small>{{asociation.viewValue}}</small>
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+<div class="form-association" *ngIf="isDataAvailable && isMobile">
+  <div class="set-12 dialog-head">
+    <div class="set-10">
+      <h3>Datos de la asociación</h3>
+    </div>
+    <div class="set-2 txt-right">
+      <button type="button" mat-mini-fab color="primary" mat-dialog-close>
+        <mat-icon>cancel</mat-icon>
+      </button>
+    </div>
+  </div>
+  <form [formGroup]="formGroup" (submit)="onUpdateUserData(formGroup)">
+    <mat-form-field appearance="outline">
+      <mat-label><small>Tipo de asociación</small></mat-label>
+      <mat-select matInput formControlName="associationTypology">
+        <mat-option
+          *ngFor="let association of asociations"
+          [value]="association.value"
+        >
+          <small>{{ association.viewValue }}</small>
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Nombre de Asociación</mat-label>
+      <input matInput formControlName="associationName" />
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Describe tu asociación</mat-label>
+      <textarea
+        id="textarea-description"
+        cdkTextareaAutosize
+        matInput
+        formControlName="associationDescription"
+      ></textarea>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Razón social</mat-label>
+      <input matInput formControlName="associationNameComercial" />
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>R.F.C.</mat-label>
+      <input matInput formControlName="associationRFC" />
+    </mat-form-field>
+    <p><strong>Domicilio</strong></p>
+    <mat-form-field appearance="outline">
+      <mat-label>Calle</mat-label>
+      <input matInput formControlName="associationStreetAddress" />
+    </mat-form-field>
+    <div class="twoInputs ">
+      <mat-form-field class="set-5" appearance="outline">
+        <mat-label>No. Ext.</mat-label>
+        <input matInput formControlName="associationNoExtAddress" />
+      </mat-form-field>
+      <mat-form-field class="set-6" appearance="outline">
+        <mat-label>Codigo Postal</mat-label>
+        <input matInput formControlName="associationZipCodeAddress" />
+      </mat-form-field>
+    </div>
+    <mat-form-field appearance="outline">
+      <mat-label>Colonia</mat-label>
+      <input matInput formControlName="associationTownAddress" />
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Ciudad</mat-label>
+      <input matInput formControlName="associationCityAddress" />
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Estado</mat-label>
+      <input matInput formControlName="associationEstateAddress" />
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Nombre del contacto</mat-label>
+      <input matInput formControlName="associationNameContact" />
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Telefono de contacto</mat-label>
+      <input matInput formControlName="associationPhoneContact" />
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Correo electronico de contacto</mat-label>
+      <input type="email" matInput formControlName="associationEmailContact" />
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Intereses</mat-label>
+      <mat-chip-list #happyChipList>
+        <mat-chip
+          *ngFor="let item of happyArray"
+          (removed)="removeHappyItem(item)"
+        >
+          {{ item.name }}
+          <button matChipRemove>
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </mat-chip>
+        <input
+          formControlName="associationInterests"
+          placeholder="..."
+          [matChipInputFor]="happyChipList"
+          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+          [matChipInputAddOnBlur]="addOnBlur"
+          (matChipInputTokenEnd)="addHappyItem($event)"
+        />
+      </mat-chip-list>
+      <mat-hint
+        >** Presiona <strong>ENTER</strong> después de escribir algo que te haga
+        féliz, ej:
+        <strong>"Playas"</strong>
+      </mat-hint>
+    </mat-form-field>
 
-            <mat-form-field appearance="outline">
-                <mat-label>Nombre de Asociación</mat-label>
-                <input matInput formControlName="associationName">
-            </mat-form-field>
-
-            <mat-form-field appearance="outline">
-                <mat-label>Describe tu asociación</mat-label>
-                <textarea id="textarea-description" cdkTextareaAutosize matInput
-                    formControlName="associationDescription"></textarea>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Intereses</mat-label>
-                <mat-chip-list #happyChipList>
-                    <mat-chip *ngFor="let item of happyArray" (removed)="removeHappyItem(item)">
-                        {{item.name}}
-                        <button matChipRemove>
-                            <mat-icon>cancel</mat-icon>
-                        </button>
-                    </mat-chip>
-                    <input formControlName="associationInterests" placeholder="..." [matChipInputFor]="happyChipList"
-                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
-                        (matChipInputTokenEnd)="addHappyItem($event)">
-                </mat-chip-list>
-                <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te haga féliz, ej:
-                    <strong>"Playas"</strong>
-                </mat-hint>
-            </mat-form-field>
-        </div>
-
-        <div class="ctrls">
-            <button class="set-12" type="button" mat-raised-button color="warn" (click)="killDialog()">
-                <small>Cancelar</small>
-            </button>
-            <button class="set-12" type="submit" mat-raised-button color="primary" (click)="onUpdateUserData"
-               >Guardar</button>
-        </div> 
-    </form>
+    <div class="ctrls">
+      <button
+        class="set-12"
+        type="button"
+        mat-raised-button
+        color="warn"
+        (click)="clearForm()"
+      >
+        <small>Cancelar</small>
+      </button>
+      <button
+        class="set-12"
+        type="submit"
+        mat-raised-button
+        color="primary"
+        (click)="(onUpdateUserData)"
+        [disabled]="formGroup.invalid"
+      >
+        Guardar
+      </button>
+    </div>
+  </form>
 </div>
