--- a/src/app/hub/components/association-register/association-register.component.scss
+++ b/src/app/hub/components/association-register/association-register.component.scss
@@ -1,31 +1,32 @@
 :host {
-    padding: 20px;
-    float: left;
-    width: 100%;
-  
-    .form-association {
-      mat-form-field{
-        margin-bottom: 20px;
-      }
-      
-   
-      .associationSection {
-        margin-bottom: 20px;
-      }
-  
-      #textarea-description::-webkit-scrollbar {
-        display: none;
-      }
-  
-      .ctrls {
-        display: flex;
-        justify-content: center;
-  
-        button {
-          margin: 0px 5px;
-        }
-      }
-  
+  padding: 20px;
+  float: left;
+  width: 100%;
+
+  .form-association {
+    .dialog-head {
+      margin-bottom: 10px;
     }
-  
+    form{
+     
+      .set-5 {
+        margin: 0px 25px 0px 0px
+      }
+    
+    }
+
+    #textarea-description::-webkit-scrollbar {
+      display: none;
+    }
+
+    .ctrls {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+
+      button {
+        margin: 0px 5px;
+      }
+    }
+  }
 }
