--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -8,7 +8,7 @@
       <search-input-mobile></search-input-mobile>
       <card-topics-mobile></card-topics-mobile>
     </mat-tab>
-    <mat-tab label="Pérfil">
+    <mat-tab label="Mi perfil">
       <spider-chart-mobile></spider-chart-mobile>
       <circle-chart-mobile></circle-chart-mobile>
       <card-solutions-mobile></card-solutions-mobile>
