--- a/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.html
+++ b/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.html
@@ -7,10 +7,7 @@
       {{ progressValue }}%
     </span>
   </div>
-  <div class="set-5">
-    <span><strong>{{ progressValue }}%</strong> De libres profesionistas en tu red</span>
-      <!-- <button type="button" mat-raised-button color="accent" disabled> 
-        Editar ocupación
-      </button>-->
+  <div class="set-5 circleinfo">
+    <span><strong>{{ progressValue }}%</strong> De profesionistas en tu red</span>
       </div>
 </div>
