--- a/src/app/hub/components/spider-chart-mobile/spider-chart-mobile.component.scss
+++ b/src/app/hub/components/spider-chart-mobile/spider-chart-mobile.component.scss
@@ -2,7 +2,7 @@
   canvas {
     // width: 100%;
     min-width: 375px;
-    background-color:  #00031D;
+    //background-color:  #00031D;
     padding: 20px;
    
   }
