--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,7 @@
       <mat-icon class="" color="accent" >keyboard_arrow_left</mat-icon>
     </button>
     <button class="set-10" type="button" (click)="linkMe('profile');">
-      Pérfil
+      Perfil
     </button>
     <button type="button" class="set-1" (click)="isProfile = !isProfile">
       <mat-icon color="accent">close</mat-icon>
