--- a/src/app/hub/components/line-chart-mobile/line-chart-mobile.component.html
+++ b/src/app/hub/components/line-chart-mobile/line-chart-mobile.component.html
@@ -1,7 +1,6 @@
 <div class="card-line-chart mt-1">
   <mat-card>
     <h4>Completamiento de perfil</h4>
-    <br />
-    <mat-progress-bar class="mt-1" color="accent" mode="determinate" value="40"></mat-progress-bar>
+    <mat-progress-bar class="mt-1" color="accent" mode="determinate" value="{{progressValue}}"></mat-progress-bar>
   </mat-card>
 </div>
