--- a/src/app/components/complaint-dialog/complaint-dialog.component.html
+++ b/src/app/components/complaint-dialog/complaint-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="set-12 dialog-head">
-  <input type="file" #file (change)="onFileSelected($event)" multiple>
+  <input type="file" #file (change)="onFileSelected($event)" accept="image/*" capture="environment" multiple>
   <div class="set-10">
     <h3>Denuncia</h3>
   </div>
