--- a/src/app/components/description-viewer/description-viewer.component.html
+++ b/src/app/components/description-viewer/description-viewer.component.html
@@ -40,7 +40,7 @@
     <button type="button" mat-icon-button color="primary" (click)="openBottomSheet()">
       <mat-icon>share</mat-icon>
     </button>
-    <button type="button" mat-icon-button color="primary" disabled>
+    <button type="button" mat-icon-button color="primary" (click)="handleComments()">
       <mat-icon>forum</mat-icon>
     </button>
   </div>
