--- a/src/app/components/search-dialog/search-dialog.component.html
+++ b/src/app/components/search-dialog/search-dialog.component.html
@@ -8,11 +8,12 @@
   </mat-form-field>
 
   <div class="set-12 ctrls">
-    <button type="button" mat-button color="warn" (click)="killDialog()">
+    <button type="button" mat-raised-button color="warn" (click)="killDialog()">
       <small>Cancelar</small>
     </button>
-    <button type="submit" mat-mini-fab color="primary" [disabled]="searchFormGroup.invalid">
-      <mat-icon>search</mat-icon>
+    <button type="submit" mat-raised-button color="primary" [disabled]="searchFormGroup.invalid">
+      <!-- <mat-icon>search</mat-icon> -->
+      <small>Búscar</small>
     </button>
   </div>
 </form>
