--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -207,6 +207,6 @@
 <div class="set-12" *ngIf="isDataAvailable && isMobile">
   <div class="public-document-mobile-subcategory-view" [user]="user" [isCollaborator]="isCollaborator"
     [document]="document" [category]="subcategory"></div>
-  <div class="public-document-mobile-fixed-tools" [isCollaborator]="isCollaborator"
+  <div class="public-document-mobile-fixed-tools" [user]="user" [isCollaborator]="isCollaborator"
     (topicAdded)="getTopicStatus($event)"></div>
 </div>
