--- a/src/app/components/add-comments-sheet/add-comments-sheet.component.scss
+++ b/src/app/components/add-comments-sheet/add-comments-sheet.component.scss
@@ -31,4 +31,11 @@
       }
     }
   }
+
+  .file-hldr {
+    font-weight: bold;
+    font-style: italic;
+    margin: 20px 0;
+    text-align: center;
+  }
 }
