--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,16 +12,17 @@
 <div class="set-12 mobilenav" *ngIf="isDataAvailable && isMobile" [class.menuopen]="open">
   <div class="set-12 topnav">
     <div class="set-6">
-      <button type="button" (click)="utilityService.linkMe('/'); open = !open">
-        Menú
+      <button type="button" mat-mini-fab color="accent" (click)="utilityService.linkMe('/'); open = !open">
+        <mat-icon>home</mat-icon>
       </button>
     </div>
-    <div class="set-6 txt-right" (click)="open = !open">
-      <button type="button">
-        <mat-icon color="accent">close</mat-icon>
+    <div class="set-6 txt-right">
+      <button type="button" mat-mini-fab (click)="open = !open">
+        <mat-icon>cancel</mat-icon>
       </button>
     </div>
   </div>
+
   <!---User is not login-->
   <div class="set-12 innernav" *ngIf="user == null">
     <div class="set-12">
@@ -40,24 +41,28 @@
       </button>
     </div>
   </div>
+
   <!---User is  login-->
   <div class="set-12" *ngIf="user != null">
     <div class="set-12 avatarhldr">
       <button type="button" class="avatar set-3">
         <img src="{{ user.avatarImage }}" alt="{{ user.firstname }}" *ngIf="user.avatarImage != null" />
         <span *ngIf="user.avatarImage == null">
-          {{ user.firstname | firstword | firstletter
-          }}{{ user.lastname | firstword | firstletter }}
+          {{ user.firstname | firstword | firstletter }}{{ user.lastname | firstword | firstletter }}
         </span>
       </button>
       <div class="usrname set-8">{{ user.firstname }} {{ user.lastname }}</div>
-      <mat-icon class="set-1 arrow-rigth" (click)="open = !open; displayProfileMenu()">keyboard_arrow_right</mat-icon>
+      <div class="set-1 arrow-rigth">
+        <button type="button" (click)="open = !open; displayProfileMenu()">
+          <mat-icon color="accent">keyboard_arrow_right</mat-icon>
+        </button>
+      </div>
     </div>
 
     <div class="set-12 innernav">
       <div class="set-12 innerbtn">
         <button type="button" (click)="linkMe('quienesSomos')">
-          <span >Quienes somos</span>
+          <span>Quienes somos</span>
         </button>
         <button type="button" (click)="linkMe('home')">
           <span>Mision/Video</span>
@@ -72,17 +77,17 @@
 
 <div class="set-12 mobilenav" *ngIf="isDataAvailable && isMobile" [class.menuopen]="isProfile">
   <div class="set-12 topnav">
-
-    <button class="set-1" type="button" (click)="open = !open; isProfile = !isProfile">
-      <mat-icon color="accent" >keyboard_arrow_left</mat-icon>
-    </button>
-    <button class="set-10" type="button" (click)="linkMe('profile');">
-      Pérfil
-    </button>
-    <button type="button" class="set-1" (click)="isProfile = !isProfile">
-      <mat-icon color="accent">close</mat-icon>
-    </button>
-
+    <div class="set-1">
+      <button type="button" mat-mini-fab color="accent" (click)="open = !open; isProfile = !isProfile">
+        <mat-icon>keyboard_arrow_left</mat-icon>
+      </button>
+    </div>
+    <div class="set-10">&nbsp;</div>
+    <div class="set-1">
+      <button type="button" mat-mini-fab color="accent" (click)="isProfile = !isProfile">
+        <mat-icon>cancel</mat-icon>
+      </button>
+    </div>
   </div>
 
   <div class="set-12 innernav">
@@ -103,7 +108,7 @@
         <span>Configuracion</span>
       </button>
       <button class="mt-4" type="button" (click)="onSignOut()">
-        <!-- <mat-icon>power_settings_new</mat-icon> --> <span>Salir</span> 
+        <!-- <mat-icon>power_settings_new</mat-icon> --> <span>Salir</span>
       </button>
     </div>
   </div>
