change icon form
fix margin card-topics

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,7 +90,7 @@
       <button  type="button" (click)="linkMe('profile')">
         <span>Mi perfil</span>
       </button>
-      <button  type="button" disabled>
+      <button  type="button" (click)="linkMe('associations')">
         <span>Asociaciones</span>
       </button>
       <button  type="button" disabled>
@@ -99,7 +99,7 @@
       <button  type="button" disabled>
         <span>Dashboard</span>
       </button>
-      <button  type="button" (click)="linkMe('configuracion')">
+      <button  type="button" (click)="linkMe('configuration')">
         <span>Configuracion</span>
       </button>
       <button  type="button" (click)="onSignOut()">
