--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -95,7 +95,7 @@
             (matChipInputTokenEnd)="addHappyItem($event)"
           />
           <button type="button" matSuffix (click)="clearInputHappy()">
-            <mat-icon>delete</mat-icon>
+            <mat-icon>cancel</mat-icon>
           </button>
         </mat-chip-list>
       </mat-form-field>
@@ -121,7 +121,7 @@
             (matChipInputTokenEnd)="addUnhappyItem($event)"
           />
           <button type="button" matSuffix (click)="clearInputUnhappy()">
-            <mat-icon>delete</mat-icon>
+            <mat-icon>cancel</mat-icon>
           </button>
         </mat-chip-list>
         <mat-hint
