--- a/src/app/hub/app-configuration/app-configuration.component.scss
+++ b/src/app/hub/app-configuration/app-configuration.component.scss
@@ -3,72 +3,80 @@
   width: 100%;
   height: auto;
 
+
+      mat-icon {
+        font-size: 20pt;
+      }
+ 
+
   .form-profile {
-    mat-form-field:last-child{
+  
+    mat-form-field:last-child {
       margin-bottom: 20px;
     }
-    .avatarhldr{
+    .avatarhldr {
       margin-bottom: 15px;
-      
-      .profile{
-      height: 80px;
-   
-      .avatar {
-        width: 75px;
-        height: 75px;
-        overflow: hidden;
-        border-radius: 100%;
-        position: absolute;
-        left: 20px;
-        // transform: translateX(-50%);
-        background: #ffffff;
-        top: 130px;
-        border: 3px solid #ffffff;
-    
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          border-radius: 50%;
-          position: relative;
-          z-index: 4;
-        }
-    
-        span {
-          font-size: 20pt;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          height: 100%;
-          background: #f1f1f1;
-        }
-    
-        .overlay {
-          width: 100%;
-          height: 100%;
-          background: rgba($color: #000000, $alpha: 0.7);
+
+      .profile {
+        height: 80px;
+
+        .avatar {
+          width: 75px;
+          height: 75px;
+          overflow: hidden;
+          border-radius: 100%;
           position: absolute;
-          top: 0;
-          left: 0;
-          z-index: 7;
-          opacity: 0;
-          transition: all .2s linear;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-    
-          mat-icon {
+          left: 20px;
+          // transform: translateX(-50%);
+          background: #ffffff;
+          top: 130px;
+          border: 3px solid #ffffff;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
             position: relative;
             z-index: 4;
-            // color: #ffffff;
-            font-size: 30pt;
+          }
+
+          span {
+            font-size: 20pt;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            background: #f1f1f1;
+          }
+
+          .overlay {
+            width: 100%;
+            height: 100%;
+            background: rgba($color: #000000, $alpha: 0.7);
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 7;
+            opacity: 0;
+            transition: all 0.2s linear;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            mat-icon {
+              position: relative;
+              z-index: 4;
+              // color: #ffffff;
+              font-size: 15pt;
+            }
+          }
+
+          .overlay:hover {
+            opacity: 1;
           }
         }
-    
-        .overlay:hover {
-          opacity: 1;
-        }
-      } }
+      }
     }
     mat-checkbox {
       margin-top: 15px;
@@ -91,14 +99,5 @@
         margin: 0px 5px;
       }
     }
-
   }
-
-
-
-    
-  
-
-
-
 }
