--- a/src/app/hub/components/association-register/association-register.component.html
+++ b/src/app/hub/components/association-register/association-register.component.html
@@ -69,7 +69,7 @@
       <mat-label>Estado</mat-label>
       <input matInput formControlName="associationEstateAddress" />
     </mat-form-field>
-    <mat-form-field appearance="outline">
+    <!-- <mat-form-field appearance="outline">
       <mat-label>Nombre del contacto</mat-label>
       <input matInput formControlName="associationNameContact" />
     </mat-form-field>
@@ -80,9 +80,36 @@
     <mat-form-field appearance="outline">
       <mat-label>Correo electronico de contacto</mat-label>
       <input type="email" matInput formControlName="associationEmailContact" />
-    </mat-form-field>
+    </mat-form-field> -->
     <mat-form-field appearance="outline">
       <mat-label>Intereses</mat-label>
+      <mat-chip-list #happyChipList>
+        <mat-chip
+          *ngFor="let item of happyArray"
+          (removed)="removeHappyItem(item)"
+        >
+          {{ item.name }}
+          <button matChipRemove>
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </mat-chip>
+        <input
+          formControlName="associationInterests"
+          placeholder="..."
+          [matChipInputFor]="happyChipList"
+          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+          [matChipInputAddOnBlur]="addOnBlur"
+          (matChipInputTokenEnd)="addHappyItem($event)"
+        />
+      </mat-chip-list>
+      <!-- <mat-hint
+        >** Presiona <strong>ENTER</strong> después de escribir algo que te haga
+        féliz, ej:
+        <strong>"Playas"</strong>
+      </mat-hint> -->
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Desintereses</mat-label>
       <mat-chip-list #happyChipList>
         <mat-chip
           *ngFor="let item of happyArray"
