--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -132,7 +132,7 @@
       </mat-form-field>
     </div>
 
-    <mat-checkbox (change)="openDialogAssociationRegister()"
+    <mat-checkbox (change)="openDialogAssociationRegister()"  formControlName="checked"
       >¿Perteneces a una asociación?</mat-checkbox
     >
 
