--- a/src/app/hub/components/association-register/association-register.component.html
+++ b/src/app/hub/components/association-register/association-register.component.html
@@ -4,7 +4,7 @@
       <h3>Datos de la asociación</h3>
     </div>
     <div class="set-2 txt-right">
-      <button type="button" mat-mini-fab color="primary" mat-dialog-close>
+      <button type="button" mat-mini-fab color="primary" (click)="killDialog()">
         <mat-icon>cancel</mat-icon>
       </button>
     </div>
