--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -132,9 +132,12 @@
       </mat-form-field>
     </div>
 
-    <mat-checkbox (change)="openDialogAssociationRegister()"  formControlName="checked"
+    <mat-checkbox (change)="openDialogAssociationRegister()"  *ngIf="!checked"
       >¿Perteneces a una asociación?</mat-checkbox
     >
+    <mat-checkbox (change)="openDialogAssociationRegister()"  *ngIf="checked"
+    >¿Perteneces a una asociación?</mat-checkbox
+  >
 
     <div class="ctrls">
       <button
