add form associations

--- a/src/app/components/add-comments/add-comments.component.html
+++ b/src/app/components/add-comments/add-comments.component.html
@@ -30,7 +30,7 @@
       <textarea matInput cdkTextareaAutosize formControlName="message"></textarea>
     </mat-form-field>
 
-    <div class="set-12 txt-right">
+    <div class="addfile">
       <button type="button" mat-mini-fab color="warn" (click)="file.click()" matTooltip="Adjuntar archivo"
         matTooltipClass="tooltip" class="bwico">
         <mat-icon>attach_file</mat-icon>
