--- a/src/app/hub/components/association-register/association-register.component.scss
+++ b/src/app/hub/components/association-register/association-register.component.scss
@@ -4,23 +4,20 @@
   width: 100%;
 
   .form-association {
+
     .dialog-head {
       margin-bottom: 10px;
-    }
-    form{
-     
-      .set-5 {
-        margin: 0px 25px 0px 0px
-      }
-    
     }
 
     #textarea-description::-webkit-scrollbar {
       display: none;
     }
-
+    .addfile{
+      margin-top: 40px;
+    }
+   
     .ctrls {
-      margin-top: 20px;
+      margin-top: 30px;
       display: flex;
       justify-content: center;
 
