--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -83,14 +83,15 @@
               <mat-icon>favorite</mat-icon>
             </button>
 
+            <button type="button" mat-mini-fab color="warn" matTooltip="Compartir" matTooltipClass="tooltip"
+              (click)="openBottomSheet()">
+              <mat-icon>share</mat-icon>
+            </button>
+
             <button type="button" mat-mini-fab color="warn" matTooltip="Agregar Comentario" matTooltipClass="tooltip"
               (click)="popAddCommentsDialog()">
-              <mat-icon>add_comment</mat-icon>
+              <mat-icon>forum</mat-icon>
             </button>
-            <!-- <button type="button" mat-mini-fab color="warn" matTooltip="Agregar Testimonio" matTooltipClass="tooltip"
-              (click)="openModalTestimony(null)">
-              <mat-icon>book</mat-icon>
-            </button> -->
           </div>
         </div>
 
