--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -30,24 +30,34 @@
           <mat-icon *ngIf="selectedCategory.images.length == 0">panorama</mat-icon>
           <slider-images [images]="selectedCategory.images" *ngIf="selectedCategory.images.length != 0">
           </slider-images>
-          <!-- <div class="overlay" (click)="popImageViewer()">
-            <mat-icon>photo_camera</mat-icon>
-            <div class="cover"></div>
-          </div> -->
         </div>
 
         <div class="set-12 infohldr">
-          <p class="set-12 card-title">
-            {{ selectedCategory.category.name }}
-          </p>
+          <p class="set-12 card-title">{{ selectedCategory.category.name }}</p>
           <expanded-text [text]="selectedCategory.description" [minLength]="200"
             [title]="selectedCategory.category.name" *ngIf="selectedCategory.description != null"></expanded-text>
           <p *ngIf="selectedCategory.description == null">
             <small>Sin descripción</small>
           </p>
         </div>
+
+        <div class="set-12 cardctrls">
+          <button type="button" mat-mini-fab color="primary" disabled>
+            <mat-icon>favorite</mat-icon>
+          </button>
+          <button type="button" mat-mini-fab color="primary" matTooltip="Compartir" matTooltipClass="tooltip"
+            (click)="openBottomSheet()">
+            <mat-icon>share</mat-icon>
+          </button>
+          <button type="button" mat-mini-fab color="primary" matTooltip="Comentar" matTooltipClass="tooltip"
+            (click)="handleComments()">
+            <mat-icon>forum</mat-icon>
+          </button>
+        </div>
       </mat-card>
-      <horizontal-stats [users]="document?.stats?.users" [interactions]="stats?.interactions"></horizontal-stats>
+
+      <horizontal-stats [users]="userCount" [interactions]="stats?.interactions"></horizontal-stats>
+
       <div class="set-12">
         <vertical-stats [topics]="document?.stats?.topics" [solutions]="stats?.solutions"></vertical-stats>
       </div>
