--- a/src/app/public-documents/public/public.component.html
+++ b/src/app/public-documents/public/public.component.html
@@ -22,9 +22,20 @@
           <p class="set-12 card-title">{{ document.title }}</p>
           <expanded-text [text]="document.description" [minLength]="200" [title]="document.title"></expanded-text>
         </div>
+
+        <div class="set-12 cardctrls">
+          <button type="button" mat-mini-fab color="primary" matTooltip="Compartir" matTooltipClass="tooltip"
+            (click)="openBottomSheet()">
+            <mat-icon>share</mat-icon>
+          </button>
+          <button type="button" mat-mini-fab color="primary" matTooltip="Comentar" matTooltipClass="tooltip"
+            (click)="handleComments()">
+            <mat-icon>forum</mat-icon>
+          </button>
+        </div>
       </mat-card>
 
-      <horizontal-stats [users]="document?.stats?.users" [interactions]="document?.stats?.interactions">
+      <horizontal-stats [users]="userCount" [interactions]="document?.stats?.interactions">
       </horizontal-stats>
 
       <div class="set-12">
