--- a/src/app/public-documents/public/public.component.scss
+++ b/src/app/public-documents/public/public.component.scss
@@ -29,6 +29,25 @@
 
   .doc-description {
     padding: 0 !important;
+
+    .cardctrls {
+      text-align: right;
+      padding: 0 20px 20px 20px;
+
+      button {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+
+        mat-icon {
+          font-size: 14pt;
+        }
+      }
+
+      button:not(:first-child) {
+        margin-left: 10px;
+      }
+    }
   }
 
   .imghldr {
@@ -55,7 +74,7 @@
   }
 
   .infohldr {
-    padding: 20px;
+    padding: 20px 20px 0 20px;
   }
 
   .card-title {
