--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -78,23 +78,23 @@
               <mat-icon>favorite</mat-icon>
             </button>
 
-            <button type="button" mat-mini-fab color="warn" matTooltip="Agregar solución" matTooltipClass="tooltip"
+            <!-- <button type="button" mat-mini-fab color="warn" matTooltip="Agregar solución" matTooltipClass="tooltip"
               (click)="openModalSolution(null)">
               <mat-icon>feedback</mat-icon>
+            </button> -->
+            <button type="button" mat-mini-fab color="warn" matTooltip="Compartir" matTooltipClass="tooltip" (click)="openBottomSheet()">
+              <mat-icon>share</mat-icon>
             </button>
+
             <button type="button" mat-mini-fab color="warn" matTooltip="Agregar comentario" matTooltipClass="tooltip"
               (click)="popAddCommentsDialog()">
-              <mat-icon>add_comment</mat-icon>
+              <mat-icon>forum</mat-icon>
             </button>
-            <!-- <button type="button" mat-mini-fab color="warn" matTooltip="Agregar testimonio" matTooltipClass="tooltip"
-              (click)="openModalTestimony(null)">
-              <mat-icon>book</mat-icon>
-            </button> -->
           </div>
         </div>
 
         <div class="set-12 listhldr">
-          <solutions-card [data]="SolutionDataSource" [document]="document" [coverage]="coverage"
+          <solutions-card [data]="SolutionDataSource" [document]="document" [coverage]="coverage" [topic]="topic"
             [coverageSelected]="coverageSelected" (sendSolutionData)="openModalSolution($event)"></solutions-card>
         </div>
       </mat-card>
