change form association

--- a/src/app/hub/components/association-register/association-register.component.scss
+++ b/src/app/hub/components/association-register/association-register.component.scss
@@ -3,27 +3,44 @@
   float: left;
   width: 100%;
 
-  .form-association {
 
-    .dialog-head {
+
+  .form-association {
+    .dialog-head{
       margin-bottom: 10px;
+    }
+    ::ng-deep .mat-horizontal-stepper-header-container {
+      display: none !important;
+    }
+    
+
+    .mat-stepper-horizontal,
+    .mat-stepper-vertical {
+      background: none !important;
     }
 
     #textarea-description::-webkit-scrollbar {
       display: none;
     }
-    .addfile{
-      margin-top: 40px;
-    }
-   
-    .ctrls {
-      margin-top: 30px;
-      display: flex;
-      justify-content: center;
 
-      button {
-        margin: 0px 5px;
+    .ctrls {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      margin-top: 20px;
+  
+      * {
+        margin: 0;
+      }
+  
+      button:not(:first-child) {
+        margin-left: 10px;
+      }
+  
+      mat-spinner {
+        margin-left: 20px;
       }
     }
+   
   }
 }
