--- a/src/app/hub/components/association-register/association-register.component.html
+++ b/src/app/hub/components/association-register/association-register.component.html
@@ -1,181 +1,334 @@
 <div class="form-association" *ngIf="isDataAvailable && isMobile">
-  <div class="set-12 dialog-head">
-    <div class="set-10">
-      <h3>Datos de la asociación</h3>
+  
+  <mat-stepper
+  #stepper  
+  >
+
+  <!--Search your association or register-->
+  <mat-step>
+    <div class="set-12 dialog-head">
+      <div class="set-10">
+        <h3>Datos de la asociación</h3>
+      </div>
+      <div class="set-2 txt-right">
+        <button
+          type="button"
+          mat-mini-fab
+          color="primary"
+          (click)="killDialog()"
+        >
+          <mat-icon>cancel</mat-icon>
+        </button>
+      </div>
     </div>
-    <div class="set-2 txt-right">
-      <button type="button" mat-mini-fab color="primary" (click)="killDialog()">
-        <mat-icon>cancel</mat-icon>
+    <div class="search-hldr" *ngIf="isMobile">
+      <form [formGroup]="searchFormGroup" (submit)="onSearch(searchFormGroup)">
+        <mat-form-field appearance="outline">
+          <mat-label>Buscar tu asociación</mat-label>
+          <input matInput formControlName="search" />
+        </mat-form-field>
+        <mat-hint><small>Si no esta en la lista da click en siguiente para registrarla</small></mat-hint>
+      </form>
+    </div>
+    <div class="set-12 ctrls">
+      <button
+        mat-raised-button
+        color="warn"
+        matStepperNext
+       
+      >
+        <small>Siguiente</small>
       </button>
     </div>
-  </div>
-  <form [formGroup]="formGroup" (submit)="onCreateAssociation(formGroup)">
-    <mat-form-field appearance="outline">
-      <mat-label><small>Tipo de asociación</small></mat-label>
-      <mat-select matInput formControlName="associationTypology">
-        <mat-option
-          *ngFor="let association of asociations"
-          [value]="association.value"
+  </mat-step>
+  <!-- Step 2 Data Association-->
+  <mat-step>
+    <div class="set-12 dialog-head">
+      <div class="set-10">
+        <h3>Datos de la asociación</h3>
+      </div>
+      <div class="set-2 txt-right">
+        <button
+          type="button"
+          mat-mini-fab
+          color="primary"
+          (click)="killDialog()"
         >
-          <small>{{ association.viewValue }}</small>
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>Nombre de Asociación</mat-label>
-      <input matInput formControlName="associationName" />
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>Describe tu asociación</mat-label>
-      <textarea
-        id="textarea-description"
-        cdkTextareaAutosize
-        matInput
-        formControlName="associationDescription"
-      ></textarea>
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>Razón social</mat-label>
-      <input matInput formControlName="associationNameComercial" />
-    </mat-form-field>
-    <!-- <mat-form-field appearance="outline">
-      <mat-label>R.F.C.</mat-label>
-      <input matInput formControlName="associationRFC" />
-    </mat-form-field> -->
-    <p><strong>Domicilio</strong></p>
-    <mat-form-field appearance="outline">
-      <mat-label>Calle</mat-label>
-      <input matInput formControlName="associationStreet" />
-    </mat-form-field>
+          <mat-icon>cancel</mat-icon>
+        </button>
+      </div>
+    </div>
     
-      <mat-form-field  appearance="outline">
+    <form [formGroup]="dataAssociationFormGroup" >
+      <mat-form-field appearance="outline">
+        <mat-label><small>Tipo de asociación</small></mat-label>
+        <mat-select matInput formControlName="associationTypology">
+          <mat-option
+            *ngFor="let association of asociations"
+            [value]="association.value"
+          >
+            <small>{{ association.viewValue }}</small>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Nombre de Asociación</mat-label>
+        <input matInput formControlName="associationName" />
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Describe tu asociación</mat-label>
+        <textarea
+          id="textarea-description"
+          cdkTextareaAutosize
+          matInput
+          formControlName="associationDescription"
+        ></textarea>
+      </mat-form-field>
+    </form>
+    <div class="set-12 ctrls">
+      <button mat-raised-button color="warn" matStepperPrevious>
+        <small>Atras</small>
+      </button>
+      <button mat-raised-button color="warn" matStepperNext>
+        <small>Siguiente</small>
+      </button>
+    </div>
+  </mat-step>
+
+  <!-- Step 3 Data Comercial-->
+  <mat-step>
+    <div class="set-12 dialog-head">
+      <div class="set-10">
+        <h3>Datos de la asociación</h3>
+      </div>
+      <div class="set-2 txt-right">
+        <button
+          type="button"
+          mat-mini-fab
+          color="primary"
+          (click)="killDialog()"
+        >
+          <mat-icon>cancel</mat-icon>
+        </button>
+      </div>
+    </div>
+    <form [formGroup]="dataComercialFormGroup" >
+      <mat-form-field appearance="outline">
+        <mat-label>Razón social</mat-label>
+        <input matInput formControlName="associationNameComercial" />
+      </mat-form-field>
+   
+      <p><strong>Domicilio</strong></p>
+      <mat-form-field appearance="outline">
+        <mat-label>Calle</mat-label>
+        <input matInput formControlName="associationStreet" />
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
         <mat-label>No. Ext.</mat-label>
         <input matInput formControlName="associationNumExt" />
       </mat-form-field>
-      <mat-form-field  appearance="outline">
+      <mat-form-field appearance="outline">
         <mat-label>No. Int.</mat-label>
         <input matInput formControlName="associationNumInt" />
       </mat-form-field>
-      <mat-form-field  appearance="outline">
+      <mat-form-field appearance="outline">
         <mat-label>Codigo Postal</mat-label>
         <input matInput formControlName="associationZipCode" />
       </mat-form-field>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Colonia</mat-label>
-      <input matInput formControlName="associationTown" />
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>Ciudad</mat-label>
-      <input matInput formControlName="associationCity" />
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>Estado</mat-label>
-      <input matInput formControlName="associationState" />
-    </mat-form-field>
-    <!-- <mat-form-field appearance="outline">
-      <mat-label>Nombre del contacto</mat-label>
-      <input matInput formControlName="associationNameContact" />
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>Telefono de contacto</mat-label>
-      <input matInput formControlName="associationPhoneContact" />
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>Correo electronico de contacto</mat-label>
-      <input type="email" matInput formControlName="associationEmailContact" />
-    </mat-form-field> -->
-    <mat-form-field appearance="outline">
-      <mat-label>¿Qué te hace feliz de México?</mat-label>
-      <mat-chip-list #happyChipList>
-        <mat-chip
-          *ngFor="let item of happyArray"
-          (removed)="removeHappyItem(item)"
+      <mat-form-field appearance="outline">
+        <mat-label>Colonia</mat-label>
+        <input matInput formControlName="associationTown" />
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Ciudad</mat-label>
+        <input matInput formControlName="associationCity" />
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Estado</mat-label>
+        <input matInput formControlName="associationState" />
+      </mat-form-field>
+      <div class="addfile">
+        <button
+          type="button"
+          mat-raised-button
+          color="warn"
+          (click)="file.click()"
+          matTooltip="Adjuntar archivo"
+          matTooltipClass="tooltip"
+          class="bwico"
         >
-          {{ item.name }}
-          <button type="button" matChipRemove>
-            <mat-icon>cancel</mat-icon>
-          </button>
-        </mat-chip>
-        <input
-          formControlName="interestsTopic"
-          placeholder=""
-          [matChipInputFor]="happyChipList"
-          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-          [matChipInputAddOnBlur]="addOnBlur"
-          (matChipInputTokenEnd)="addHappyItem($event)"
-        />
-        <button type="button" matSuffix (click)="clearInputHappy()">
-          <mat-icon>cancel</mat-icon>
+          <mat-icon>attach_file</mat-icon>
         </button>
-      </mat-chip-list>
-    </mat-form-field>
-
-    <mat-form-field appearance="outline">
-      <mat-label>¿Qué te entristece de México?</mat-label>
-      <mat-chip-list #unhappyChipList>
-        <mat-chip
-          *ngFor="let item of unhappyArray"
-          (removed)="removeUnhappyItem(item)"
-        >
-          {{ item.name }}
-          <button type="button" matChipRemove>
-            <mat-icon>cancel</mat-icon>
-          </button>
-        </mat-chip>
-        <input
-          formControlName="uninterestsTopic"
-          placeholder=""
-          [matChipInputFor]="unhappyChipList"
-          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-          [matChipInputAddOnBlur]="addOnBlur"
-          (matChipInputTokenEnd)="addUnhappyItem($event)"
-        />
-        <button type="button" matSuffix (click)="clearInputUnhappy()">
-          <mat-icon>cancel</mat-icon>
-        </button>
-      </mat-chip-list>
-      <mat-hint
-        >** Presiona <strong>ENTER</strong> después de escribir algo que te
-        haga feliz entriztesca, ej:
-        <strong>"Comida o Delincuencia"</strong>
-      </mat-hint>
-    </mat-form-field>
-    <div class="addfile">
-      <button type="button" mat-raised-button color="warn" (click)="file.click()" matTooltip="Adjuntar archivo"
-        matTooltipClass="tooltip" class="bwico">
-        <mat-icon>attach_file</mat-icon>
+        <input type="file" #file (change)="onFileSelected($event)" />
+        <br />
+        <mat-hint
+          ><small
+            >** Adjuntar <strong>Acta Constitutiva, </strong>
+            <strong>Poder Notarial</strong
+            ><strong> e Identificación Oficial</strong>
+          </small>
+        </mat-hint>
+      </div>
+    </form>
+    <div class="set-12 ctrls">
+      <button mat-raised-button color="warn" matStepperPrevious>
+        <small>Atras</small>
       </button>
-      <input type="file" #file (change)="onFileSelected($event)">
-    <br>
-      <mat-hint
-        ><small>** Adjuntar <strong>Acta Constitutiva, </strong>
-        <strong>Poder Notarial</strong><strong> e Identificación Oficial</strong>
-      </small>
-      </mat-hint>
+      <button mat-raised-button color="warn" matStepperNext>
+        <small>Siguiente</small>
+      </button>
     </div>
+  </mat-step>
+  <!--Step 4 que te hace feliz-->
+  <mat-step>
+    <div class="set-12 dialog-head">
+      <div class="set-10">
+        <h3>Datos de la asociación</h3>
+      </div>
+      <div class="set-2 txt-right">
+        <button
+          type="button"
+          mat-mini-fab
+          color="primary"
+          (click)="killDialog()"
+        >
+          <mat-icon>cancel</mat-icon>
+        </button>
+      </div>
+    </div>
+    <form>
+      <mat-form-field appearance="outline">
+        <mat-label>¿Qué te hace feliz de México?</mat-label>
+        <mat-chip-list #happyChipList>
+          <mat-chip
+            *ngFor="let item of happyArray"
+            (removed)="removeHappyItem(item)"
+          >
+            {{ item.name }}
+            <button type="button" matChipRemove>
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip>
+          <input
+            
+            placeholder=""
+            [matChipInputFor]="happyChipList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+            [matChipInputAddOnBlur]="addOnBlur"
+            (matChipInputTokenEnd)="addHappyItem($event)"
+          />
+          <button type="button" matSuffix (click)="clearInputHappy()">
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </mat-chip-list>
+        <mat-hint
+          >** Presiona <strong>ENTER</strong> después de escribir algo que te
+           ga feliz, ej:
+          <strong>" Playas"</strong>
+        </mat-hint>
+      </mat-form-field>
+    </form>
+    <div class="set-12 ctrls">
+      <button mat-raised-button color="warn" matStepperPrevious>
+        <small>Atras</small>
+      </button>
+      <button mat-raised-button color="warn" matStepperNext>
+        <small>Siguiente</small>
+      </button>
+    </div>
+  </mat-step>
 
-    <div class="ctrls">
+  <!--Last step Register-->
+  <mat-step>
+    <div class="set-12 dialog-head">
+      <div class="set-10">
+        <h3>Datos de la asociación</h3>
+      </div>
+      <div class="set-2 txt-right">
+        <button
+          type="button"
+          mat-mini-fab
+          color="primary"
+          (click)="killDialog()"
+        >
+          <mat-icon>cancel</mat-icon>
+        </button>
+      </div>
+    </div>
+    <form>
+      <mat-form-field appearance="outline">
+        <mat-label>¿Qué te entristece de México?</mat-label>
+        <mat-chip-list #unhappyChipList>
+          <mat-chip
+            *ngFor="let item of unhappyArray"
+            (removed)="removeUnhappyItem(item)"
+          >
+            {{ item.name }}
+            <button type="button" matChipRemove>
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip>
+          <input
+            placeholder=""
+            [matChipInputFor]="unhappyChipList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+            [matChipInputAddOnBlur]="addOnBlur"
+            (matChipInputTokenEnd)="addUnhappyItem($event)"
+          />
+          <button type="button" matSuffix (click)="clearInputUnhappy()">
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </mat-chip-list>
+        <mat-hint
+          >** Presiona <strong>ENTER</strong> después de escribir algo que te
+           entriztesca, ej:
+          <strong>" Delincuencia"</strong>
+        </mat-hint>
+      </mat-form-field>
+    </form>
+    <div class="set-12 ctrls">
+      <button mat-raised-button color="warn" matStepperPrevious>
+        <small>Atras</small>
+      </button>
       <button
-        class="set-12"
         type="button"
         mat-raised-button
-        color="warn"
-        (click)="clearForm()"
-      >
-        <small>Cancelar</small>
-      </button>
-      <button
-        class="set-12"
-        type="submit"
-        mat-raised-button
         color="primary"
-        (click)="(onCreateAssociation)"
-        [disabled]="formGroup.invalid"
-       
+        (click)="onCreateAssociation()"
       >
-        Guardar
+        <small>Registrarme</small>
       </button>
+      
     </div>
-  </form>
+  </mat-step>
+    <!--
+      
+
+    
+
+      <div class="ctrls">
+        <button
+          class="set-12"
+          type="button"
+          mat-raised-button
+          color="warn"
+          (click)="clearForm()"
+        >
+          <small>Cancelar</small>
+        </button>
+        <button
+          class="set-12"
+          type="submit"
+          mat-raised-button
+          color="primary"
+          (click)="(onCreateAssociation)"
+          [disabled]="formGroup.invalid"
+        >
+          Guardar
+        </button>
+      </div>
+    </form> -->
+  </mat-stepper>
 </div>
