--- a/src/app/hub/sign-up-mobile/sign-up-mobile.component.html
+++ b/src/app/hub/sign-up-mobile/sign-up-mobile.component.html
@@ -3,12 +3,23 @@
 </div>
 
 <div class="set-12" *ngIf="isDataAvailable">
-  <mat-stepper #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
+  <mat-stepper
+    #stepper
+    [disableRipple]="true"
+    [linear]="true"
+    [@.disabled]="true"
+  >
     <mat-step>
       <div class="set-12">
         <h1>¡Hola!</h1>
         <h3>Necesitas una cuenta para ingresar</h3>
-        <input #fileInput type="file" (change)="openCropperDialog($event)" accept="image/*" hidden />
+        <input
+          #fileInput
+          type="file"
+          (change)="openCropperDialog($event)"
+          accept="image/*"
+          hidden
+        />
       </div>
 
       <!-- <div class="set-12 avatarhldr">
@@ -32,31 +43,36 @@
         <div class="set-12">
           <mat-form-field appearance="outline">
             <mat-label>Nombre(s)</mat-label>
-            <input type="text" matInput formControlName="firstname">
+            <input type="text" matInput formControlName="firstname" />
           </mat-form-field>
         </div>
 
         <div class="set-12">
           <mat-form-field appearance="outline">
             <mat-label>Apellido(s)</mat-label>
-            <input type="text" matInput formControlName="lastname">
+            <input type="text" matInput formControlName="lastname" />
           </mat-form-field>
         </div>
 
         <div class="set-12">
           <mat-form-field appearance="outline">
             <mat-label>Correo electrónico</mat-label>
-            <input type="text" matInput formControlName="email">
+            <input type="text" matInput formControlName="email" />
           </mat-form-field>
         </div>
 
         <div class="set-12">
           <mat-form-field appearance="outline">
             <mat-label>Contraseña</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'" autocomplete="off" formControlName="password">
+            <input
+              matInput
+              [type]="hide ? 'password' : 'text'"
+              autocomplete="off"
+              formControlName="password"
+            />
             <button type="button" matSuffix (click)="hide = !hide">
               <mat-icon color="primary">
-                {{ hide ? 'visibility_off' : 'visibility' }}
+                {{ hide ? "visibility_off" : "visibility" }}
               </mat-icon>
             </button>
             <mat-hint>** Mínimo 9 caracteres</mat-hint>
@@ -71,7 +87,12 @@
         </div> -->
 
         <div class="set-12 ctrls">
-          <button mat-raised-button color="warn" matStepperNext [disabled]="stepOneFormGroup.invalid">
+          <button
+            mat-raised-button
+            color="warn"
+            matStepperNext
+            [disabled]="stepOneFormGroup.invalid"
+          >
             <small>Siguiente</small>
           </button>
         </div>
@@ -81,25 +102,47 @@
     <mat-step>
       <div class="set-12">
         <p>
-          <small *ngIf="!viewSubLayouts">Organiza las categorías por interés</small>
-          <small *ngIf="viewSubLayouts">Organiza las sub categorías por interés</small>
+          <small *ngIf="!viewSubLayouts"
+            >Organiza las categorías por interés</small
+          >
+          <small *ngIf="viewSubLayouts"
+            >Organiza las sub categorías por interés</small
+          >
         </p>
       </div>
 
-      <div cdkDropList class="set-12 drag-list" (cdkDropListDropped)="dragAndDropLayout($event)"
-        *ngIf="!viewSubLayouts">
-        <div class="set-12 drag-box" *ngFor="let layout of layouts" cdkDrag (click)="onLayoutSelected(layout)">
-          <strong>{{layout.category.name}}</strong>
+      <div
+        cdkDropList
+        class="set-12 drag-list"
+        (cdkDropListDropped)="dragAndDropLayout($event)"
+        *ngIf="!viewSubLayouts"
+      >
+        <div
+          class="set-12 drag-box"
+          *ngFor="let layout of layouts"
+          cdkDrag
+          (click)="onLayoutSelected(layout)"
+        >
+          <strong>{{ layout.category.name }}</strong>
         </div>
       </div>
 
-      <div cdkDropList class="set-12 drag-sublist" (cdkDropListDropped)="dragAndDropSubLayout($event)"
-        *ngIf="viewSubLayouts">
+      <div
+        cdkDropList
+        class="set-12 drag-sublist"
+        (cdkDropListDropped)="dragAndDropSubLayout($event)"
+        *ngIf="viewSubLayouts"
+      >
         <div class="set-12 drag-box" *ngFor="let layout of sublayouts" cdkDrag>
-          <strong>{{layout.category.name}}</strong>
+          <strong>{{ layout.category.name }}</strong>
         </div>
         <div class="set-12 innerctrls">
-          <button type="button" mat-mini-fab color="primary" (click)="hideSubLayouts()">
+          <button
+            type="button"
+            mat-mini-fab
+            color="primary"
+            (click)="hideSubLayouts()"
+          >
             <mat-icon>arrow_back</mat-icon>
           </button>
         </div>
@@ -120,17 +163,26 @@
         <mat-form-field appearance="outline">
           <mat-label>¿Qué te hace feliz de México?</mat-label>
           <mat-chip-list #happyChipList>
-            <mat-chip *ngFor="let item of happyArray" (removed)="removeHappyItem(item)">
-              {{item.name}}
+            <mat-chip
+              *ngFor="let item of happyArray"
+              (removed)="removeHappyItem(item)"
+            >
+              {{ item.name }}
               <button matChipRemove>
                 <mat-icon>cancel</mat-icon>
               </button>
             </mat-chip>
-            <input placeholder="..." [matChipInputFor]="happyChipList"
-              [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
-              (matChipInputTokenEnd)="addHappyItem($event)">
+            <input
+              placeholder="..."
+              [matChipInputFor]="happyChipList"
+              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+              [matChipInputAddOnBlur]="addOnBlur"
+              (matChipInputTokenEnd)="addHappyItem($event)"
+            />
           </mat-chip-list>
-          <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te haga féliz, ej:
+          <mat-hint
+            >** Presiona <strong>ENTER</strong> después de escribir algo que te
+            haga féliz, ej:
             <strong>"Playas"</strong>
           </mat-hint>
         </mat-form-field>
@@ -151,17 +203,26 @@
         <mat-form-field appearance="outline">
           <mat-label>¿Qué te entristece de México?</mat-label>
           <mat-chip-list #sadChipList>
-            <mat-chip *ngFor="let item of sadArray" (removed)="removeSadItem(item)">
-              {{item.name}}
+            <mat-chip
+              *ngFor="let item of sadArray"
+              (removed)="removeSadItem(item)"
+            >
+              {{ item.name }}
               <button matChipRemove>
                 <mat-icon>cancel</mat-icon>
               </button>
             </mat-chip>
-            <input placeholder="..." [matChipInputFor]="sadChipList"
-              [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
-              (matChipInputTokenEnd)="addSadItem($event)">
+            <input
+              placeholder="..."
+              [matChipInputFor]="sadChipList"
+              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+              [matChipInputAddOnBlur]="addOnBlur"
+              (matChipInputTokenEnd)="addSadItem($event)"
+            />
           </mat-chip-list>
-          <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te entriztesca, ej:
+          <mat-hint
+            >** Presiona <strong>ENTER</strong> después de escribir algo que te
+            entriztesca, ej:
             <strong>"Delincuencia"</strong>
           </mat-hint>
         </mat-form-field>
@@ -171,13 +232,19 @@
             <small>He leído y estoy de acuerdo con:</small>
           </p>
           <div class="set-12 row">
-            <mat-checkbox color="primary" formControlName="terms"></mat-checkbox>
+            <mat-checkbox
+              color="primary"
+              formControlName="terms"
+            ></mat-checkbox>
             <a href="#">
               <small>Términos y condiciones</small>
             </a>
           </div>
           <div class="set-12 row">
-            <mat-checkbox color="primary" formControlName="privacy"></mat-checkbox>
+            <mat-checkbox
+              color="primary"
+              formControlName="privacy"
+            ></mat-checkbox>
             <a href="#">
               <small>Política de privacidad</small>
             </a>
@@ -185,7 +252,8 @@
           <div class="set-12 activation-legend">
             <p>
               <small>
-                Al hacer <strong>click</strong> en <strong>"Registrarme"</strong>, te envíaremos un correo de
+                Al hacer <strong>click</strong> en
+                <strong>"Registrarme"</strong>, te envíaremos un correo de
                 activación. **
               </small>
             </p>
@@ -197,7 +265,13 @@
         <button mat-raised-button color="warn" matStepperPrevious>
           <small>Atras</small>
         </button>
-        <button type="button" mat-raised-button color="primary" [disabled]="legalsFormGroup.invalid" (click)="onRegister()">
+        <button
+          type="button"
+          mat-raised-button
+          color="primary"
+          [disabled]="legalsFormGroup.invalid"
+          (click)="onRegister()"
+        >
           <small>Registrarme</small>
         </button>
         <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
