fix styles documentos

--- a/src/app/hub/single-user/single-user.component.html
+++ b/src/app/hub/single-user/single-user.component.html
@@ -62,7 +62,7 @@
         </div>
       </div>
     </mat-card>
-    <button type="button"  (click)="linkMe('hub/documentos')" >Documentos</button>
+    <button type="button" mat-raised-button color="accent" (click)="linkMe('hub/documentos')" >Mis Documentos</button>
     <mat-card class="set-12">
       <div class="app-map-box"></div>
     </mat-card>
