add complaints module

--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -63,6 +63,10 @@
         <mat-icon>groups</mat-icon>
         <span>Usuarios</span>
       </button>
+      <button mat-menu-item (click)="linkMe('complaints')" *ngIf="userActivities.includes('moderator')">
+        <mat-icon>warning</mat-icon>
+        <span>Denuncias</span>
+      </button>
     </mat-menu>
   </div>
 
